--- a/vignettes/contributing_content.Rmd
+++ b/vignettes/contributing_content.Rmd
@@ -1,8 +1,11 @@
 ---
 title: "Contributing Content"
-author: "Tony Fujs"
 date: "`r Sys.Date()`"
 output: 
+  rmarkdown::html_vignette:
+    number_sections: yes
+    toc: true
+    keep_md: yes
   md_document:
     variant: markdown_github
 vignette: >
@@ -13,40 +16,68 @@ editor_options:
   chunk_output_type: inline
 ---
 
-# DDHCONNECT: Contributing Content
+___  
+
+# Introduction
+
 With proper authorization, you can add and update datasets and resources to the Data Catalog through `ddhconnect`.
 
-___
-
 ## Terminology
-The World Bank Data Catalog is built using the DKAN platform. In line with DKAN terminology, the term "dataset" refers to a node that has the metadata for the data and the term "resource" refers to a node that has the data file, link to the data file or any supporting document. In the Data Catalog, every "dataset" is required to have one or more attached "resources".
+The World Bank Data Catalog is built using the DKAN platform. In line with DKAN terminology, the Data Catalog content is organized in __datasets__ and __resources__.   
 
-___
+* A __dataset__ is used to group related pieces of data and their associated metadata.   
+* __Resources__ refer to the actual files, APIs or links that are being shared within a dataset. A single dataset can have multiple resources.  
+
+For more information, please refer to the [DKAN documentation](http://dkan.readthedocs.io/en/latest/community/opendatastandards.html)
+
 
 ## Setting Up Your Connection
-First, set up your connection and authenticate your credentials using `dkanr::dkanr_setup()`. You can contact the World Bank's IT Services to obtain login information to access the API's extended services, provided that you are authorized for these credentials. You can save your credentials as environment variables using `Sys.setenv()`.
-```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-Sys.setenv(username = "YOUR USERNAME", password = "YOUR PASSWORD")
+First, set up your connection and authenticate your credentials using `dkanr::dkanr_setup()`. You can contact the World Bank's IT Services to obtain login information to access the API's extended services, provided that you are authorized for these credentials. 
+
+```{r message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
+library(dkanr)
+library(ddhconnect)
+dkanr_setup(
+  url = 'https://newdatacatalogstg.worldbank.org',
+  username = Sys.getenv("ddh_username"),
+  password = Sys.getenv("ddh_stg_password")
+)
 ```
 
-```{r message=FALSE, warning=FALSE, paged.print=FALSE}
+
+```{r eval=FALSE, message=FALSE, warning=FALSE, include=FALSE, paged.print=TRUE}
 library(dkanr)
 library(ddhconnect)
 dkanr_setup(
   url = 'https://datacatalog.worldbank.org',
-  username = Sys.getenv("username"),
-  password = Sys.getenv("password")
+  username = "your_username",
+  password = "your_password"
 )
 ```
 
 ___
 
-## Adding Content
-To add content to the Data Catalog, first add the metadata as a dataset node and then add the corresponding data files, links and supporting documentation as resource nodes. Consider the case where we want to add a dataset about poverty maps, with the following metadata and attach a zip file containing the data as a resource.
+# Adding Content
+To add content to the Data Catalog, you'll need to   
 
-```{r message = FALSE, warning = FALSE, paged.print = FALSE, eval = FALSE}
-metadata = list("title" = "Test Poverty Map",
-           "body" = "Dataset to test the addition of poverty map datasets into DDH.",
+* First: create a new dataset (metadata)   
+* Second: Add the corresponding resources (data files, links, etc.)
+
+Consider the case where we want to add a geospatial dataset, and attach a zip file containing the data as a resource.
+
+## Adding a new dataset
+To add a new dataset to the Data Catalog, you need to provide a minimum of information about it. You can find the required metadata fields for a given data type using `get_required_fields()`. In our example, we want to add a geospatial dataset. 
+
+```{r}
+get_required_fields("Geospatial")
+```
+
+The metadata should be organized into a named list with the field names and corresponding values. The `create_json_body()` will then take care of the formatting and generate the required JSON body for you.
+The required JSON body is different for __dataset__ and __resource__. Set the `node_type` argument in `create_json_body()` to generate the correct JSON body. 
+
+```{r message = FALSE, warning = FALSE, paged.print = FALSE}
+metadata = list("title" = "My first dataset",
+           "body" = "A short description: What my dataset is about.",
            "field_topic" = "Poverty",
            "field_wbddh_data_class" = "Public",
            "field_wbddh_data_type" = "Geospatial",
@@ -56,16 +87,19 @@ metadata = list("title" = "Test Poverty Map",
            "field_wbddh_country" = c("Afghanistan","Albania","Algeria"),
            "field_license_wbddh" = "Custom License",
            "workflow_status" = "published")
+
+json_dataset <- create_json_body(values = metadata,
+                                 node_type = "dataset")
 ```
+
 
 Many of the fields here (Ex: `field_topic`, `field_wbddh_data_class`) take a controlled list of values as input. To view the fields that take a controlled list of values, use `get_lov_fields()`.
 
 ```{r}
-lov_fields <- get_lov_fields()
-lov_fields
+get_lov_fields()
 ```
 
-You can view the valid list of values that these controlled fields using `get_lovs()`. The `list_value_name` column in the dataframe shows the valid values:
+You can view the valid list of values for these controlled fields using `get_lovs()`. The `list_value_name` column in the dataframe shows the valid values:
 
 ```{r}
 lovs <- get_lovs()
@@ -73,114 +107,111 @@ head(lovs)
 ```
 
 
-### Adding a new dataset
-To add a new dataset to the Data Catalog, begin by formatting your metadata into a named list with the field names and corresponding values. Pass this named vector to `create_json_body()`, to format the metadata in the required JSON format. You can find the required metadata fields for a given data type using `get_required_fields()`. In our example, we want to add a geospatial dataset. 
-
-```{r}
-get_required_fields("Geospatial")
-```
-
-Format your metadata into a named list with the required fields and their values. Note that the `node_type` sets the type of the parameter and this is not required to be part of the named list.
-
-```{r message = FALSE, warning = FALSE, paged.print = FALSE, eval = FALSE}
-metadata = list("title" = "Test Poverty Map",
-           "body" = "Dataset to test the addition of poverty map datasets into DDH.",
-           "field_topic" = "Poverty",
-           "field_wbddh_data_class" = "Public",
-           "field_wbddh_data_type" = "Geospatial",
-           "field_wbddh_languages_supported" = "English",
-           "field_frequency" = "Periodicity not specified",
-           "field_wbddh_economy_coverage" = "Blend",
-           "field_wbddh_country" = c("Afghanistan","Albania","Algeria"),
-           "field_license_wbddh" = "Custom License",
-           "workflow_status" = "published")
-json_dataset <- create_json_body(values = metadata,
-                                 node_type = "dataset")
-```
-
 Add the dataset to the Data Catalog by passing the formatted JSON to `create_dataset()`.
-```{r message = FALSE, warning = FALSE, paged.print = FALSE, eval = FALSE}
+```{r message = FALSE, warning = FALSE, paged.print = FALSE}
 resp_dataset <- create_dataset(body = json_dataset)
 ```
 
-`create_dataset()` prints the node id of the node created for your new dataset. You can view the metadata using `get_metadata()`.
+`create_dataset()` prints the ID number (node ID) of the newly created dataset. You can view the metadata using `get_metadata()`.
 ```{r message = FALSE, warning = FALSE, paged.print = FALSE, eval = FALSE}
-your_dataset <- get_metadata(resp_dataset$nid)
-your_dataset
+resp <- get_metadata(resp_dataset$nid)
+resp
 ```
 
-### Adding a resource to the dataset
-Once the dataset node is created, you can add the data files, links and supporting documents as resources. Again, you can add a resource to the Data Catalog by creating a named list of the resource metadata, formatting it in JSON format using `create_json_body()`, and creating a resource node using `create_resource()`.
-```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-resource_metadata <-  c("title" = "Test Poverty Map Resource",
-                        "field_wbddh_data_class" = "358",
-                        "field_wbddh_resource_type" = "986",
+## Adding a resource to the dataset
+Once the dataset is created, you can add the data files, links and supporting documents as resources. Creating a resource is very similar to creating a dataset:
+* you create a named list of the resource metadata
+* you use `create_json_body()` to generate the required JSON body
+* you pass the created JSON body to `create_resource()`.
+
+```{r message=FALSE, warning=FALSE, paged.print=FALSE}
+resource_metadata <-  c("title" = "My geospatial file",
+                        "field_wbddh_data_class" = "Public",
+                        "field_wbddh_resource_type" = "Download",
                         "workflow_status" = "published")
+
 json_resource <- create_json_body(values = resource_metadata,
                                   node_type = "resource")
+
 resp_resource <- create_resource(body = json_resource)
 ```
 
 If your resource is a local file, you can upload it to the Data Catalog using `attach_file_to_resource()`.
-```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-attach_file_to_resource(resource_nid = resp_resource$nid, file_path = "PATH TO YOUR FILE")
+
+```{r message=FALSE, warning=FALSE, include=FALSE, eval=FALSE}
+attach_file_to_resource(resource_nid = resp_resource$nid, 
+                        file_path = "./path/to/your_file.zip")
 ```
 
 If your resource is a link to an external page, you can add the link as part of the resource metadata.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 resource_metadata <-  c("title" = "Small Area Estimation of Poverty",
-                        "field_wbddh_data_class" = "358",
-                        "field_wbddh_resource_type" = "1192",
+                        "field_wbddh_data_class" = "Public",
+                        "field_wbddh_resource_type" = "Related Material",
                         "field_link_api" = "http://www.nsb.gov.bt/publication/files/pub9zo1561nu.pdf",
                         "workflow_status" = "published")
+
 json_resource <- create_json_body(values = resource_metadata,
                                   node_type = "resource")
+
 resp_resource <- create_resource(body = json_resource)
 ```
 
 After the resource is added to the Data Catalog, attach it to your dataset using `attach_resources_to_dataset()`. You can attach multiple resources to a dataset by passing a vector of resource nids.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-attach_resources_to_dataset(dataset_nid = resp_dataset$nid, resource_nid = resp_resource$nid)
+attach_resources_to_dataset(dataset_nid = resp_dataset$nid, 
+                            resource_nid = resp_resource$nid)
 ```
 
 ___
 
-## Updating Content
+# Updating Content
 To update content in the Data Catalog, you need to know the node ID of the dataset you wish you edit. To obtain the node id, you can search the catalog by the title of the dataset. For example, to get the node id of the "Test Poverty Map" dataset that we just created, you can perform a search using `search_catalog()`.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 search_results <- search_catalog(fields = c("nid", "title"),
-                                 filters = c("title" = "Test Poverty Map"))
+                                 filters = c("title" = "My first dataset"))
 poverty_map_nid <- search_results[[1]]$nid
 ```
 
-### Updating a dataset
+## Updating a dataset
 
 The process of updating a dataset is similar to the process of adding a new dataset. Create a named vector with the updated metadata fields and the correspodning new values. Format the metadata using `create_json_body()` and pass it to `update_dataset()` to update the dataset.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-update_dataset_metadata <- c("field_wbddh_country" = "59",
-                             "field_tags" = "1236",
+update_dataset_metadata <- c("field_wbddh_country" = "Colombia",
+                             "field_tags" = "Poverty",
                              "workflow_status" = "published")
+
 update_dataset_json <- create_json_body(values = update_dataset_metadata, node_type = “dataset”)
-resp_update_dataset <- update_dataset(nid = poverty_map_nid, body = update_dataset_json)
+
+update_dataset(nid = poverty_map_nid, body = update_dataset_json)
 ```
-Note that you need to set the "workflow_status" to "published" every time you update the node.
 
-### Updating a resource
+Note that you need to set the __workflow_status__ to "published" __every time__ you update the node.
 
-Use the same process as above to update the resource metadata. Get the resource node id, format the new metadata using `create_json_body()` and update the resource using `update_resource()`.
+## Updating a resource
+
+Use the same process as above to update the resource metadata. 
+* Get the resource node id  
+* Format the new metadata using `create_json_body()`  
+* Update the resource using `update_resource()`.
+
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-update_resource_metadata <-  c("field_format" = "666",
+update_resource_metadata <-  c("field_format" = "CSV",
                                "workflow_status" = "published")
-update_resource_json <- create_json_body(values = update_resource_metadata, node_type = “resource”)
+
+update_resource_json <- create_json_body(values = update_resource_metadata, 
+                                         node_type = “resource”)
+
 resource_nid <- get_resource_nid(poverty_map_nid)
-resp_update_resource <- update_resource(nid = resource_nid, body = resource_json)
+
+update_resource(nid = resource_nid, body = resource_json)
 ```
-Note that the functionality to search for resources is currently unavailable. Instead, search for the dataset that the resource is attached to and get the resource node ids using `get_resource_nid()`. You can find an example in the above code snippet.
 
 ___
 
-## Ending Your Connection
-After finishing your tasks, you can log out of your account.
-```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
+# Ending Your Connection
+Once you're done using the API, use the `logout_ddh()` function to end the connection:
+
+```{r message=FALSE, warning=FALSE, paged.print=FALSE}
 logout_ddh()
 ```
