made updates to vignettes

--- a/vignettes/contributing_content.Rmd
+++ b/vignettes/contributing_content.Rmd
@@ -146,17 +146,10 @@ resource_metadata <-  c("title" = "Small Area Estimation of Poverty",
                         "field_wbddh_resource_type" = "Related Material",
                         "field_link_api" = "http://www.nsb.gov.bt/publication/files/pub9zo1561nu.pdf")
 
-json_resource <- create_json_resource(values = resource_metadata)
+json_resource <- create_json_resource(values = resource_metadata, dataset_nid = "111")
 
 resp_resource <- create_resource(body = json_resource)
 ```
-
-After the resource is added to the Data Catalog, attach it to your dataset using `attach_resources_to_dataset()`. You can attach multiple resources to a dataset by passing a vector of resource nids.
-```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-attach_resources_to_dataset(dataset_nid = resp_dataset$nid, 
-                            resource_nid = resp_resource$nid)
-```
-
 ___
 
 # Updating Content
